crates/nargo_cli/tests/compile_failure/overflowing_assignment/src/main.nr
fn main() {
    let x:u8 = -1;
    let y:u8 = 300;
    assert(x!=y);
}
